Bug 118556 - Statistics Regression. OK button always disabled because of decimal separator dependence with locale UI not dealt
Summary: Statistics Regression. OK button always disabled because of decimal separator...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Dennis Francis
URL:
Whiteboard: target:6.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2018-07-05 16:27 UTC by Jacques Guilleron
Modified: 2018-07-09 06:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Datas as found at https://dennisfrancis.wordpress.com/2018/07/03/multivariate-regression-in-calc/ (11.15 KB, application/vnd.oasis.opendocument.spreadsheet)
2018-07-05 16:34 UTC, Jacques Guilleron
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jacques Guilleron 2018-07-05 16:27:38 UTC
Description:
As described in summary

Steps to Reproduce:
1.Open Data > Statistics > Regression...
2.fill all needed References  
3.try to finish by using OK.

Actual Results:
OK buton doesn't work.

Expected Results:
OK button works


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 2 Jacques Guilleron 2018-07-05 16:40:50 UTC
Regression since this worked into
LO 6.2.0.0.alpha0+ Build ID: 4a82543b3419339ae554485c582a80c41a57c417
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-06-22_06:30:14
Locale: fr-FR (fr_FR); Calc: CL
Comment 3 Xavier Van Wijmeersch 2018-07-05 19:18:53 UTC
confirm with linux x86_64

Version: 6.2.0.0.alpha0+
Build ID: 3c01b8cc4f15df16b4373855b8797d5dcff59327
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group threaded
Comment 4 Julien Nabet 2018-07-05 19:50:47 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Investigating a bit shows the pb is due to locale setting + decimal separator.
Indeed with English locale, everything is ok but with French locale, it doesn't work.

Dennis: noticing https://cgit.freedesktop.org/libreoffice/core/commit/?id=b7a02f2bb66b990289eb7f4dc80069d1545179a4, thought you might be interested in this one.
Comment 5 Julien Nabet 2018-07-05 19:51:58 UTC
The pb is fConfidenceLevel value which is wrong with decimal separator = ","
Comment 6 Commit Notification 2018-07-08 12:02:27 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=187af5be47db42e2f4ab94319f932b847f897ce2

tdf#118556 : Respect locale specific decimal separator...

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Jacques Guilleron 2018-07-09 06:18:56 UTC
Fine Dennis,

Works as expected with
LO 6.2.0.0.alpha0+ Build ID: 9d7166b448198875bdff43d7054d0f5914e675de
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-07-08_23:42:49
Locale: fr-FR (fr_FR); Calc: CL
Thank you very much.