tdf#118556 : Respect locale specific decimal separator...

in Regression dialog box's confidence-level entry.
Do not write floating-point numbers to cells as strings using
OUString::number() converter if the cell is supposed to be a
numeric one.

This also amends the uitest document such that the "expected"
confidence level cell is numeric and not string.

Thanks to Julien Nabet <serval2412@yahoo.fr> for pointing me to
the specific issue.

Change-Id: I7d12674bf69fc53348366a03b7e6ff0af9588511